--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -36,3 +36,29 @@
   font-size: 6.25rem;
   margin: 0 0.5rem;
 }
+
+.countdownButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  height: 5rem;
+
+  margin-top: 2rem;
+
+  background: var(--blue);
+
+  color: var(--white);
+  font-size: 1.25rem;
+  font-weight: 600;
+
+  border: 0;
+  border-radius: 5px;
+
+  transition: background-color 0.5s;
+}
+
+.countdownButton:hover {
+  background: var(--blue-dark);
+}
