--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
 
-  height: 100vh;
+  min-height: 100vh;
   max-width: 992px;
 
   margin: 0 auto;
@@ -16,4 +16,6 @@
   gap: 6.25rem;
   align-content: center;
   grid-template-columns: 1fr 1fr;
+
+  margin: 4rem 0;
 }
