--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -59,7 +59,13 @@
   transition: background-color 0.5s;
 }
 
-.countdownButton:hover {
+.countdownButton:disabled {
+  background: var(--white);
+  color: var(--text);
+  cursor: not-allowed;
+}
+
+.countdownButton:not([disabled]):hover {
   background: var(--blue-dark);
 }
 
@@ -68,7 +74,7 @@
    color: var(--title);
 }
 
-.countdownButtonActive:hover {
+.countdownButtonActive:not([disabled]):hover {
    background: var(--red);
    color: var(--white);
 }
