--- a/src/styles/components/ChallengeBox.module.css
+++ b/src/styles/components/ChallengeBox.module.css
@@ -39,3 +39,76 @@
 .challengeNotActive p img {
   margin-bottom: 1rem;
 }
+
+.challengeActive {
+  display: flex;
+  flex-direction: column;
+
+  height: 100%;
+}
+
+.challengeActive header {
+  padding: 0 2rem 1.5rem;
+
+  color: var(--blue);
+  font-weight: 600;
+  font-size: 1.25rem;
+
+  border-bottom: 1px solid var(--gray-line);
+}
+
+.challengeActive main {
+  flex: 1;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.challengeActive main strong {
+  margin: 1.5rem 0 1rem;
+
+  color: var(--title);
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+.challengeActive main p {
+  line-height: 1.5;
+}
+
+.challengeActive footer {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+}
+
+.challengeActive footer button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  height: 3rem;
+
+  color: var(--white);
+  font-size: 1rem;
+  font-weight: 600;
+
+  border: 0;
+  border-radius: 5px;
+
+  transition: filter 0.5s;
+}
+
+.challengeActive footer button:hover {
+  filter: brightness(0.9);
+}
+
+.challengeActive footer button.challengeFailedButton {
+  background: var(--red);
+}
+
+.challengeActive footer button.challengeSucceededButton {
+  background: var(--green);
+}
